# cortana-external

./: .gitignore  AGENTS.md  README.md  TONAL_SERVICE.md  WHOOP_SERVICE.md  go.mod  go.sum  launchd-run.sh  main.go  package.json  pnpm-lock.yaml
market_lab/: README.md  pyproject.toml
market_lab/docs/: README.md
market_lab/docs/planning/: roadmap.md
market_lab/docs/planning/Implementation/: v0-forward-looking-trust-reviews.md  v1-codex-analyst-committee.md  v2-tradingagents-inspired-market-intelligence.md  v3-watchlists-opportunity-board.md  v4-portfolio-intelligence.md  v5-execution-readiness.md  v6-data-environment-separation.md  (+2 more)
market_lab/launchd/: com.cortana.market-lab-settle-due.plist
market_lab/market_lab/: broker_adapter.py  checks.py  cli.py  codex_review.py  environment.py  evidence.py  execution_intents.py  market_data.py  memory.py  models.py  monitor_alerts.py  opportunities.py  portfolio_context.py  runner.py  schwab_portfolio.py  sentiment_sources.py  settlement.py  storage.py  token_budget.py  tradingagents_adapter.py  verdict.py  watchlists.py
market_lab/market_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
market_lab/market_lab/config/: symbol_profiles.json
market_lab/scripts/: settle-due.sh  tradingagents_market_lab_review.py
market_lab/tests/: test_checks.py  test_codex_review.py  test_evidence.py  test_execution_intents.py  test_memory.py  test_opportunities.py  test_portfolio_context.py  test_runner.py  test_sentiment_sources.py  test_settlement.py  test_storage.py  test_tradingagents_adapter.py  test_verdict.py
(+619 files in other folders)
